[package]
name = "imagefy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", default-features = false, features = ["derive", "std", "help"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }

[profile.release]
lto = true
codegens-units = 1
panic = "abort"
debug = false
overflow-checks = false
